--- a/index.html
+++ b/index.html
@@ -1,77 +1,94 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
   <head>
-    <title>LFYSGA Emu Online</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Binary ROM Emulator</title>
+    <style>
+      body {
+        background: #001010;
+        color: silver;
+        font-family: "Courier New", monospace;
+        text-align: center;
+      }
+      textarea {
+        width: 80%;
+        height: 120px;
+        background-color: black;
+        color: #39FF14;
+        font-family: "Courier New", monospace;
+        font-size: 14px;
+        margin-top: 10px;
+      }
+    </style>
   </head>
   <body>
     <canvas id="screen" width="255" height="240" style="border:1px solid black; background-color: #202f20;"></canvas>
     <h2>Input the binary ROM</h2>
-    <input type="file" id="in">
+    <input type="file" id="in"><br><br>
+    <textarea id="textbox" placeholder="Or type your binary ROM here..."></textarea><br>
+    <button onclick="downloadROM()">Download Text</button>
     <div id="output"></div>
-    <h4>Write your own code!</h4>
+
     <script>
-      let r1 = "00000000"
+      let r1 = 0;
       const canvas = document.getElementById("screen");
       const ctx = canvas.getContext("2d");
       const pixelSize = 2;
-
 
       const dp = (x, y, color) => {
         ctx.fillStyle = color;
         ctx.fillRect(x * pixelSize, y * pixelSize, pixelSize, pixelSize);
       };
 
-
       document.getElementById("in").addEventListener("change", function () {
         const file = this.files[0];
         if (!file) return;
 
-
         const reader = new FileReader();
 
-
         reader.onload = function (e) {
-          const lines = e.target.result.split(/\r?\n/);
-
-
-          if (lines.length < 1 || lines[1].length < 16) {
-            document.getElementById("output").innerHTML = "ROM format invalid or too short.";
-            return;
-          }
-
-
-          const func = lines[1].slice(0, 8);
-          const in1 = lines[1].slice(8, 12);
-          const in2 = lines[1].slice(12);
-
-
-          if (func === "11111111") {
-            const i1 = parseInt(in1, 2);
-            const i2 = parseInt(in2, 2);
-            dp(i1, i2, "green");
-          }
-          if (func === "00000011") {
-            const i1 = parseInt(in1,2);
-            const i2 = parseInt(in2,2);
-            r1 = i1 + i2;
-          }
-          if (func === "00000001"){
-            const i1 = parseInt(in1,2);
-            const i2 = parseInt(in2,2);
-            r1 = i1 - i2;
-          }
-          if(func === "00000000"){
-            const i1 = parseInt(in1,2);
-            const i2 = parseInt(in2,2);
-            dp(i1,i2, #202f20)
-          }
-          document.getElementById("output").innerHTML = "<pre>" + e.target.result + "</pre>";
+          runROM(e.target.result);
         };
-
 
         reader.readAsText(file);
       });
-      </script>
+
+      function runROM(data) {
+        const lines = data.split(/\r?\n/);
+
+        if (lines.length < 1 || lines[1].length < 16) {
+          document.getElementById("output").innerHTML = "ROM format invalid or too short.";
+          return;
+        }
+
+        const func = lines[1].slice(0, 8);
+        const in1 = lines[1].slice(8, 12);
+        const in2 = lines[1].slice(12);
+
+        const i1 = parseInt(in1, 2);
+        const i2 = parseInt(in2, 2);
+
+        if (func === "11111111") {
+          dp(i1, i2, "green");
+        } else if (func === "00000011") {
+          r1 = i1 + i2;
+        } else if (func === "00000001") {
+          r1 = i1 - i2;
+        } else if (func === "00000000") {
+          dp(i1, i2, "#202f20");
+        }
+
+        document.getElementById("output").innerHTML = "<pre>" + data + "</pre>";
+      }
+
+      function downloadROM() {
+        const text = document.getElementById("textbox").value;
+        const blob = new Blob([text], { type: "text/plain" });
+        const a = document.createElement("a");
+        a.href = URL.createObjectURL(blob);
+        a.download = "rom.txt";
+        a.click();
+        URL.revokeObjectURL(a.href);
+      }
+    </script>
   </body>
 </html>
