--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Binary ROM Emulator</title>
+    <title>LFYSGA Emulator online</title>
     <style>
       body {
         background: #001010;
@@ -19,6 +19,7 @@
         margin-top: 10px;
       }
     </style>
+    <link rel="icon" href="favicon.png" type="image/png">
   </head>
   <body>
     <canvas id="screen" width="255" height="240" style="border:1px solid black; background-color: #202f20;"></canvas>
