--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         margin-top: 10px;
       }
     </style>
-    <link rel="icon" href="favicon.png" type="image/png">
+    <link rel="shortcut icon" href="favicon.png" type="image/png">
   </head>
   <body>
     <canvas id="screen" width="255" height="240" style="border:1px solid black; background-color: #202f20;"></canvas>
