--- a/index.html
+++ b/index.html
@@ -1,108 +1,117 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>LFYSGA Emulator online</title>
-    <style>
-      body {
-        background: #001010;
-        color: silver;
-        font-family: "Courier New", monospace;
-        text-align: center;
-      }
-      textarea {
-        width: 80%;
-        height: 120px;
-        background-color: black;
-        color: #39FF14;
-        font-family: "Courier New", monospace;
-        font-size: 14px;
-        margin-top: 10px;
-      }
-    </style>
-    <link rel="shortcut icon" href="favicon.png" type="image/png">
-    <link rel="icon" href="favicon.png" type="image/png">
-  </head>
-  <body>
-    <canvas id="screen" width="255" height="240" style="border:1px solid black; background-color: #202f20;"></canvas>
-    <h2>Input the binary ROM</h2>
-    <input type="file" id="in"><br><br>
-    <textarea id="textbox" placeholder="Or type your binary ROM here..."></textarea><br>
-    <button onclick="downloadROM()">Download Text</button>
-    <div id="output"></div>
+<head>
+  <title>LFYSGA Emulator Online</title>
+  <style>
+    body {
+      background: #001010;
+      color: silver;
+      font-family: "Courier New", monospace;
+      text-align: center;
+    }
+    textarea {
+      width: 80%;
+      height: 120px;
+      background-color: black;
+      color: #39FF14;
+      font-family: "Courier New", monospace;
+      font-size: 14px;
+      margin-top: 10px;
+    }
+  </style>
+</head>
+<body>
+  <canvas id="screen" width="255" height="240" style="border:1px solid black; background-color: #202f20;"></canvas>
+  <h2>Choose or Upload a Binary ROM</h2>
+  <select id="romSelect">
+    <option value="">-- Select a ROM --</option>
+    <option value="ROM 1\n1111111100010010">Draw Green Pixel</option>
+    <option value="ROM 2\n0000001100100001">Add Example</option>
+    <option value="ROM 3\n0000000101000011">Subtract Example</option>
+  </select><br><br>
 
-    <script>
-      let r1 = 0;
-      const canvas = document.getElementById("screen");
-      const ctx = canvas.getContext("2d");
-      const pixelSize = 4;
+  <input type="file" id="in"><br><br>
+  <textarea id="textbox" placeholder="Or type your binary ROM here..."></textarea><br>
+  <button onclick="downloadROM()">Download Text</button>
+  <div id="output"></div>
 
-      const dp = (x, y, color) => {
-        ctx.fillStyle = color;
-        ctx.fillRect(x * pixelSize, y * pixelSize, pixelSize, pixelSize);
+  <script>
+    let r1 = 0;
+    const canvas = document.getElementById("screen");
+    const ctx = canvas.getContext("2d");
+    const pixelSize = 4;
+
+    const dp = (x, y, color) => {
+      ctx.fillStyle = color;
+      ctx.fillRect(x * pixelSize, y * pixelSize, pixelSize, pixelSize);
+    };
+
+    function clearCanvas() {
+      ctx.clearRect(0, 0, canvas.width, canvas.height);
+    }
+
+    function runROM(data) {
+      if (!data.trim()) return;
+
+      clearCanvas();
+
+      const lines = data.split(/\r?\n/);
+
+      if (lines.length < 2 || lines[1].length < 16) {
+        document.getElementById("output").innerHTML = "ROM format invalid or too short.";
+        return;
+      }
+
+      const func = lines[1].slice(0, 8);
+      const in1 = lines[1].slice(8, 12);
+      const in2 = lines[1].slice(12);
+
+      const i1 = parseInt(in1, 2);
+      const i2 = parseInt(in2, 2);
+
+      if (func === "11111111") {
+        dp(i1, i2, "green");
+      } else if (func === "00000011") {
+        r1 = i1 + i2;
+      } else if (func === "00000001") {
+        r1 = i1 - i2;
+      } else if (func === "00000000") {
+        dp(i1, i2, "#202f20");
+      }
+
+      document.getElementById("output").innerHTML = "<pre>" + data + "</pre>";
+    }
+
+    document.getElementById("in").addEventListener("change", function () {
+      const file = this.files[0];
+      if (!file) return;
+      const reader = new FileReader();
+      reader.onload = function (e) {
+        document.getElementById("textbox").value = e.target.result;
+        runROM(e.target.result);
       };
+      reader.readAsText(file);
+    });
 
-      function clearCanvas() {
-        ctx.clearRect(0, 0, canvas.width, canvas.height);
-      }
+    document.getElementById("textbox").addEventListener("input", function () {
+      runROM(this.value);
+    });
 
-      function runROM(data) {
-        const lines = data.split(/\r?\n/);
+    document.getElementById("romSelect").addEventListener("change", function () {
+      const selectedROM = this.value;
+      document.getElementById("textbox").value = selectedROM;
+      runROM(selectedROM);
+    });
 
-        if (lines.length < 1 || lines[1].length < 16) {
-          document.getElementById("output").innerHTML = "ROM format invalid or too short.";
-          return;
-        }
-
-        const func = lines[1].slice(0, 8);
-        const in1 = lines[1].slice(8, 12);
-        const in2 = lines[1].slice(12);
-
-        const i1 = parseInt(in1, 2);
-        const i2 = parseInt(in2, 2);
-
-        if (func === "11111111") {
-          dp(i1, i2, "green");
-        } else if (func === "00000011") {
-          r1 = i1 + i2;
-        } else if (func === "00000001") {
-          r1 = i1 - i2;
-        } else if (func === "00000000") {
-          dp(i1, i2, "#202f20");
-        }
-
-        document.getElementById("output").innerHTML = "<pre>" + data + "</pre>";
-      }
-
-      document.getElementById("in").addEventListener("change", function () {
-        const file = this.files[0];
-        if (!file) return;
-
-        const reader = new FileReader();
-
-        reader.onload = function (e) {
-          runROM(e.target.result);
-        };
-
-        reader.readAsText(file);
-      });
-
-      function downloadROM() {
-        const text = document.getElementById("textbox").value;
-        const blob = new Blob([text], { type: "text/plain" });
-        const a = document.createElement("a");
-        a.href = URL.createObjectURL(blob);
-        a.download = "rom.txt";
-        a.click();
-        URL.revokeObjectURL(a.href);
-      }
-      setInterval(() => {
-        clearCanvas();
-
-        const textboxData = document.getElementById("textbox").value;
-        if (textboxData) {
-          runROM(textboxData);
-        }
-      }, 1000);
-    </script>
-  </body>
+    function downloadROM() {
+      const text = document.getElementById("textbox").value;
+      const blob = new Blob([text], { type: "text/plain" });
+      const a = document.createElement("a");
+      a.href = URL.createObjectURL(blob);
+      a.download = "rom.txt";
+      a.click();
+      URL.revokeObjectURL(a.href);
+    }
+  </script>
+</body>
 </html>
