--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
   <h2>Choose or Upload a Binary ROM</h2>
   <select id="romSelect">
     <option value="">-- Select a ROM --</option>
-    <option value="ROM 1\n1111111100010010">Draw Green Pixel</option>
-    <option value="ROM 2\n0000001100100001">Add Example</option>
-    <option value="ROM 3\n0000000101000011">Subtract Example</option>
+    <option value="1111111100010010">Draw Green Pixel</option>
+    <option value="0000001100100001">Add Example</option>
+    <option value="0000000101000011">Subtract Example</option>
   </select><br><br>
 
   <input type="file" id="in"><br><br>
