--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
       font-size: 14px;
       margin-top: 10px;
     }
+    video {
+      width:80px;
+      height:80px;
   </style>
 </head>
 <body>
