--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>LFYSGA Emulator Online</title>
-  <video src="image.gif">
+  <img src="image.gif">
   <h1>Welcome to the LFYSGA development website!</h1>
   <style>
     body {
