--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
   </style>
 </head>
 <body>
+  <img src="img.gif" alt="Welcome to the LFYSGA dev website!">
   <canvas id="screen" width="255" height="240" style="border:1px solid black; background-color: #202f20;"></canvas>
   <h2>Choose or Upload a Binary ROM</h2>
   <select id="romSelect">
