--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
       margin-top: 10px;
     }
   </style>
+  <link type="icon" href="favicon.png">
+  <link type=" shortcut icon" href="favicon.png">
 </head>
 <body>
   <img src="img.gif" alt="Welcome to the LFYSGA dev website!">
