--- a/index.html
+++ b/index.html
@@ -20,13 +20,14 @@
     }
   </style>
   <link type="icon" href="favicon.png">
-  <link type=" shortcut icon" href="favicon.png">
+  <link type="shortcut icon" href="favicon.png">
 </head>
 <body>
   <img src="img.gif" alt="Welcome to the LFYSGA dev">
   <canvas id="screen" width="255" height="240" style="border:1px solid black; background-color: #202f20;"></canvas>
   <h2>Choose or Upload a Binary ROM</h2>
-  <select id="romSelect">
+  <select id="romSelect" style="background-color: black;
+    color:white;">
     <option value="">-- Select a ROM --</option>
     <option value="1111111100010010">Draw Pixel</option>
     <option value="0000001100100001">Add Example</option>
