--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link type="icon" href="favicon.png">
   <title>LFYSGA Emulator Online</title>
   <style>
     body {
@@ -23,6 +24,7 @@
 <body>
   <canvas id="screen" width="255" height="240" style="border:1px solid black; background-color: #202f20;"></canvas>
   <h2>Choose or Upload a Binary ROM</h2>
+  <img src="img.gif">
   <select id="romSelect">
     <option value="">-- Select a ROM --</option>
     <option value="1111111100010010 
