--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link type="icon" href="favicon.png">
   <title>LFYSGA Emulator Online</title>
   <style>
     body {
@@ -20,6 +19,8 @@
       margin-top: 10px;
     }
   </style>
+  <link rel="shortcut icon" href="favicon.png" type="image/png">
+  <link rel="icon" href="favicon.png" type="image/png">
 </head>
 <body>
   <canvas id="screen" width="255" height="240" style="border:1px solid black; background-color: #202f20;"></canvas>
@@ -35,7 +36,7 @@
     <option value="0000000100110001
       0000000100010010">Subtract Examples</option>
   </select><br><br>
-
+  <img src="img.gif" alt="LFYSGA Logo">
   <input type="file" id="in"><br><br>
   <textarea id="textbox" placeholder="Or type your binary ROM here..."></textarea><br>
   <button onclick="downloadROM()">Download Text</button>
