--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
   <h2>Choose or Upload a Binary ROM</h2>
   <select id="romSelect">
     <option value="">-- Select a ROM --</option>
-    <option value="1111111100010010 
+    <option value="
+1111111100010010 
 1111111100100011 
 1111111100110100">Draw 3 Green Pixels</option>
     <option value="0000001100010001
