--- a/index.html
+++ b/index.html
@@ -33,25 +33,34 @@
 1111111100100011 
 1111111100110100
 1111111100010010">Draw 3 Green Pixels</option>
-    <option value="0000001100010001
+    <option value="
+0000001100010001
 0000001100100010">Add Examples</option>
-    <option value="0000000100110001
+    <option value="
+0000000100110001
 0000000100010010">Subtract Examples</option>
   </select><br><br>
   <input type="file" id="in"><br><br>
   <textarea id="textbox" placeholder="Or type your binary ROM here..."></textarea><br>
   <button onclick="downloadROM()">Download Text</button>
   <div id="output"></div>
-
+  <select id="filter">
+    <option value=1>filter</option>
+    <option value=4>placeholder 4x</option>
+  </select>
   <script>
     let r1 = 0;
     const canvas = document.getElementById("screen");
+    const fil = document.getElementById("filter");
     const ctx = canvas.getContext("2d");
     const pixelSize = 4;
 
     const dp = (x, y, color) => {
       ctx.fillStyle = color;
-      ctx.fillRect(x * pixelSize, y * pixelSize, pixelSize, pixelSize);
+      pixelSize = pixelSize / fil;
+      for (i=1;i != fil;i++){
+        ctx.fillRect(x * pixelSize, y * pixelSize, pixelSize, pixelSize);
+      }
     };
 
     function clearCanvas() {
