--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   <select id="filter">
     <option value=1>filter</option>
     <option value=4>placeholder 4x</option>
-  </select>
+  </select><br><br>
   <script>
     let r1 = 0;
     const canvas = document.getElementById("screen");
