--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <link rel="icon" href="favicon.png" type="image/png">
 </head>
 <body>
-  <canvas id="screen" width="255" height="240" style="border:1px solid black; background-color: #202f20;"></canvas>
+  <canvas id="screen" width="255" height="240" style="border:1px solid black; background-color: #202f20;"></canvas><br>
    <img src="img.gif" alt=" ">
   <h2>Choose or Upload a Binary ROM</h2>
   <select id="romSelect">
