--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
       font-size: 14px;
       margin-top: 10px;
     }
+    #romSelect{
+      background-color:black;
+      color:white;
+    }
   </style>
   <link rel="shortcut icon" href="favicon.png" type="image/png">
   <link rel="icon" href="favicon.png" type="image/png">
