--- a/index.html
+++ b/index.html
@@ -88,6 +88,12 @@
           r1 = i1 - i2;
         } else if (func === "00000000") {
           dp(i1, i2, "#202f20");
+        } else if (func === "11111110"){
+          if (i1 === "0001")){
+            rx = r1.slice(8,12);
+            ry = r1.slice(12);
+            dp(rx,ry,"green");
+          }
         }
       }
 
