--- a/index.html
+++ b/index.html
@@ -128,10 +128,10 @@
       URL.revokeObjectURL(a.href);
     }
   </script>
-  <p> </p>
-  <p></p>
-  <p></p>
-  <p></p>
+  <p>00000011 : add</p>
+  <p>00000001 : sub</p>
+  <p>11111111 : drw</p>
+  <p>11111110 : dws</p>
   <p></p>
 </body>
 </html>
