--- a/index.html
+++ b/index.html
@@ -30,9 +30,16 @@
   <h2>Choose or Upload a Binary ROM</h2>
   <select id="romSelect">
     <option value="">-- Select a ROM --</option>
-    <option value="ROM\n1111111100100011\n1111111100110100\n1111111100010010">Draw 3 Green Pixels</option>
-    <option value="ROM\n0000001100010001\n0000001100100010">Add Examples</option>
-    <option value="ROM\n0000000100110001\n0000000100010010">Subtract Examples</option>
+    <option value="
+1111111100100011
+1111111100110100
+1111111100010010">Draw 3 Green Pixels</option>
+    <option value="
+0000001100010001
+0000001100100010">Add Examples</option>
+    <option value="
+0000000100110001
+0000000100010010">Subtract Examples</option>
   </select><br><br>
 
   <input type="file" id="in"><br><br>
