--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
   <div id="output"></div>
 
   <script>
+    const i = 0;
+    const RAM = new Unit8Array(256);
     const canvas = document.getElementById("screen");
     const ctx = canvas.getContext("2d");
 
@@ -53,14 +55,24 @@
         const op = line.slice(0, 8);
         const x = parseInt(line.slice(8, 16), 2);
         const y = parseInt(line.slice(16, 24), 2);
+        const adressx = line.slice(8,16);
+        const adressy = line.slice(16,24);
 
         if (op === "11111111") {
           dp(x, y, "lime");
         } else if (op === "00000000") {
-          dp(x, y, "#202f20"); // erase pixel
+          dp(x, y, "#202f20");
+        } else if (op === "00000001"){
+          RAM[adressx] = y;
+        } else if (op === "11111110"){
+          dp(adressx,adressy, "lime");
+        } else if (op === "11111100"){
+          RAM[i] = RAM[adressx]+RAM[adressy] & 0xFF;
+          i+=1;
+        } else if (op === "11111000"){
+          RAM[i] = RAM[adressx]-RAM[adressy] & 0xFF;
+          i+=1;
         }
-        // You can expand with more 24-bit opcodes here
-      }
 
       document.getElementById("output").innerHTML = "<pre>" + data + "</pre>";
     }
