--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
   <div id="output"></div>
 
   <script>
+    const cRAM = new Unit8Array(256);
     const i = 0;
     const RAM = new Unit8Array(256);
     const canvas = document.getElementById("screen");
@@ -52,6 +53,7 @@
       const lines = data.split(/\r?\n/).map(l => l.trim()).filter(l => l.length === 24);
 
       for (let line of lines) {
+        cRAM[i] = line;
         const op = line.slice(0, 8);
         const x = parseInt(line.slice(8, 16), 2);
         const y = parseInt(line.slice(16, 24), 2);
@@ -68,12 +70,12 @@
           dp(adressx,adressy, "lime");
         } else if (op === "11111100"){
           RAM[i] = RAM[adressx]+RAM[adressy] & 0xFF;
-          i+=1;
+          
         } else if (op === "11111000"){
           RAM[i] = RAM[adressx]-RAM[adressy] & 0xFF;
-          i+=1;
+          
         }
-
+        i+=1;
       document.getElementById("output").innerHTML = "<pre>" + data + "</pre>";
     }
 
@@ -103,6 +105,7 @@
       URL.revokeObjectURL(a.href);
     }
   </script>
+  <select id="examples"><option value=" ">placeholder</option></select>
   <p></p>
 </body>
 </html>
