--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
       margin-top: 10px;
     }
   </style>
-  <link type="icon" href="img.gif">
-  <link type="shortcut icon" href="img.gif">
+  <link rel="icon" href="img.gif" type="image/gif">
+  <link rel="shortcut icon" href="img.gif" type="image/gif">
 </head>
 <body>
   <canvas id="screen" width="256" height="256" style="border:1px solid black; background-color: #202f20;"></canvas><br><br>
