--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
       URL.revokeObjectURL(a.href);
     }
   </script>
-  <select id="examples"><option value=" ">placeholder</option> <option value=" ">placeholder</option></select>
+  <select id="examples"><option value=" ">placeholder</option> <option value=" ">placeholder</option><option value="">ph</option></select>
   <p></p>
 </body>
 </html>
