--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
   <div id="output"></div>
 
   <script>
-    const cRAM = new Unit8Array(256);
-    const i = 0;
+    const cRAM = new Uint8Array(256);
+    let i = 0;
     const RAM = new Unit8Array(256);
     const canvas = document.getElementById("screen");
     const ctx = canvas.getContext("2d");
@@ -57,17 +57,15 @@
         const op = line.slice(0, 8);
         const x = parseInt(line.slice(8, 16), 2);
         const y = parseInt(line.slice(16, 24), 2);
-        const adressx = line.slice(8,16);
-        const adressy = line.slice(16,24);
 
         if (op === "11111111") {
           dp(x, y, "lime");
         } else if (op === "00000000") {
           dp(x, y, "#202f20");
         } else if (op === "00000001"){
-          RAM[adressx] = y;
+          RAM[x] = y;
         } else if (op === "11111110"){
-          dp(adressx,adressy, "lime");
+          dp(RAM[x],RAM[y], "lime");
         } else if (op === "11111100"){
           RAM[i] = RAM[adressx]+RAM[adressy] & 0xFF;
           
