--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>LFYSGA Emulator</title>   
+  <title>LFYSGA Emulator</title>
   <style>
     body {
       background: #001010;
@@ -19,28 +19,27 @@
       margin-top: 10px;
     }
   </style>
-  <link rel="icon" href="img.gif" type="image/gif">
-  <link rel="shortcut icon" href="img.gif" type="image/gif">
+  <link rel="icon" type="image/gif" href="img.gif">
 </head>
 <body>
   <canvas id="screen" width="256" height="256" style="border:1px solid black; background-color: #202f20;"></canvas><br><br>
-  <img src="img.gif">
-  <h2>Upload or Type Binary ROM</h2>
+  <img src="img.gif" alt="Logo"><br>
+  <h2>Upload or Paste Binary ROM</h2>
   <input type="file" id="in"><br><br>
   <textarea id="textbox" placeholder="Each line = 24-bit binary: opcode (8) + X (8) + Y (8)"></textarea><br>
   <button onclick="downloadROM()">Download Text</button>
   <div id="output"></div>
 
   <script>
-    const cRAM = new Uint8Array(256);
-    let i = 0;
-    const RAM = new Unit8Array(256);
     const canvas = document.getElementById("screen");
     const ctx = canvas.getContext("2d");
+    const pixelSize = 1;
+    let RAM = new Uint8Array(256);
+    let ROM = [];
 
     function dp(x, y, color) {
       ctx.fillStyle = color;
-      ctx.fillRect(x, y, 1, 1);
+      ctx.fillRect(x, y, pixelSize, pixelSize);
     }
 
     function clearCanvas() {
@@ -48,33 +47,44 @@
     }
 
     function runROM(data) {
-      if (!data.trim()) return;
       clearCanvas();
-      const lines = data.split(/\r?\n/).map(l => l.trim()).filter(l => l.length === 24);
+      RAM = new Uint8Array(256);
+      ROM = data.split(/\r?\n/).map(line => line.trim()).filter(line => line.length === 24);
+      let pc = 0;
 
-      for (let line of lines) {
-        cRAM[i] = line;
-        const op = line.slice(0, 8);
+      while (pc < ROM.length) {
+        const line = ROM[pc];
+        const opcode = line.slice(0, 8);
         const x = parseInt(line.slice(8, 16), 2);
         const y = parseInt(line.slice(16, 24), 2);
 
-        if (op === "11111111") {
-          dp(x, y, "lime");
-        } else if (op === "00000000") {
-          dp(x, y, "#202f20");
-        } else if (op === "00000001"){
-          RAM[x] = y;
-        } else if (op === "11111110"){
-          dp(RAM[x],RAM[y], "lime");
-        } else if (op === "11111100"){
-          RAM[i] = RAM[adressx]+RAM[adressy] & 0xFF;
-          
-        } else if (op === "11111000"){
-          RAM[i] = RAM[adressx]-RAM[adressy] & 0xFF;  
-        } else if (op === "00000001"){
-          line = cRAM[adressx]
+        switch (opcode) {
+          case "11111111": // drw
+            dp(x, y, "lime");
+            break;
+          case "00000000": // drs
+            dp(x, y, "#202f20");
+            break;
+          case "00000001": // mov
+            RAM[x] = y;
+            break;
+          case "11111110": // drw from RAM[x], RAM[y]
+            dp(RAM[x], RAM[y], "lime");
+            break;
+          case "11111100": // add
+            RAM[0] = (RAM[x] + RAM[y]) & 0xFF;
+            break;
+          case "11111000": // sub
+            RAM[0] = (RAM[x] - RAM[y] + 256) & 0xFF;
+            break;
+          case "00000111": // jp
+            pc = ((x << 8) | y) - 1;
+            break;
         }
-        i+=1;
+
+        pc++;
+      }
+
       document.getElementById("output").innerHTML = "<pre>" + data + "</pre>";
     }
 
@@ -104,8 +114,5 @@
       URL.revokeObjectURL(a.href);
     }
   </script>
-  <select id="examples"><option value=" ">placeholder</option> <option value=" ">placeholder</option><option value="">ph</option></select>
-  <p></p>
-  <p></p>
 </body>
 </html>
