--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
       margin-top: 10px;
     }
   </style>
-  <link rel="icon" type="image/gif" href="img.gif">
+  <link rel="icon" type="image/gif" href="img.gif>
+  <link rel="shortcut icon" type="image/gif" href="img.gif">
 </head>
 <body>
   <canvas id="screen" width="256" height="256" style="border:1px solid black; background-color: #202f20;"></canvas><br><br>
