--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       margin-top: 10px;
     }
   </style>
-  <link rel="icon" type="image/gif" href="img.gif>
+  <link rel="icon" type="image/gif" href="img.gif">
   <link rel="shortcut icon" type="image/gif" href="img.gif">
 </head>
 <body>
