--- a/index.html
+++ b/index.html
@@ -19,18 +19,17 @@
       margin-top: 10px;
     }
   </style>
-  <link rel="icon" type="image/gif" href="img.gif">
-  <link rel="shortcut icon" type="image/gif" href="img.gif">
+  <link rel="icon" href="img.gif" type="image/gif">
+  <link rel="shortcut icon" href="img.gif" type="image/gif">
 </head>
 <body>
   <canvas id="screen" width="256" height="256" style="border:1px solid black; background-color: #202f20;"></canvas><br><br>
-  <img src="img.gif" alt="Logo"><br>
   <h2>Upload or Paste Binary ROM</h2>
   <input type="file" id="in"><br><br>
-  <textarea id="textbox" ></textarea><br>
+  <textarea id="textbox" placeholder="Each line = 24-bit binary: opcode (8) + X (8) + Y (8)"></textarea><br>
   <button onclick="downloadROM()">Download Text</button>
   <div id="output"></div>
-  <p></p>
+
   <script>
     const canvas = document.getElementById("screen");
     const ctx = canvas.getContext("2d");
@@ -73,6 +72,9 @@
           case "00000001": // mov
             RAM[x] = y;
             break;
+          case "00000100": // movr
+            RAM[x] = RAM[y];
+            break;
           case "11111110": // drw from RAM[x], RAM[y]
             dp(RAM[x], RAM[y], "lime");
             break;
@@ -85,15 +87,13 @@
           case "00000111": // jp
             pc = ((x << 8) | y) - 1;
             break;
-          case "00000100": // movr RAM[x] = RAM[y]
-            RAM[x] = RAM[y];
-            break;
         }
 
-        document.getElementById("output").innerHTML = "<pre>" + ROM.slice(0, pc + 1).join('\n') + "</pre>";
-        await sleep(500);
+        await sleep(250);
         pc++;
       }
+
+      document.getElementById("output").innerHTML = "<pre>" + data + "</pre>";
     }
 
     document.getElementById("in").addEventListener("change", function () {
@@ -122,6 +122,5 @@
       URL.revokeObjectURL(a.href);
     }
   </script>
-  <p></p>
 </body>
 </html>
