--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <link rel="shortcut icon" href="img.gif" type="image/gif">
 </head>
 <body>
-  <div id="debug" style="margin-top: 20px; font-family: monospace; color: lime;"></div><br>
+  <div id="debug" style="position:absolute; right:0; font-family: monospace; color: navy;background-color:gray;"></div><br>
   <canvas id="screen" width="256" height="256" style="border:1px solid black; background-color: #202f20;"></canvas><br><br>
   <h2>Upload or Paste Binary ROM</h2>
   <input type="file" id="in"><br><br>
