--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <title>LFYSGA Emulator</title>
   <style>
     body {
-      background: #001010;
+      background-image: url("bg.gif");
       color: silver;
       font-family: "Courier New", monospace;
       text-align: center;
