--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
   <title>LFYSGA Emulator</title>
   <style>
     body {
-      background-image: url("bg.gif");
+      background-image: url('bg.gif');
+      background-size: 1004px;
       color: silver;
       font-family: "Courier New", monospace;
       text-align: center;
