--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <style>
     body {
       background-image: url('bg.gif');
-      background-size: 1004px;
+      background-size: cover;
       color: silver;
       font-family: "Courier New", monospace;
       text-align: center;
