--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     body {
       background-image: url('bg.gif');
       background-size: cover;
+      background-position: center;
+      overflow: hidden;
       color: silver;
       font-family: "Courier New", monospace;
       text-align: center;
