--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
       background-image: url('bg.gif');
       background-size: cover;
       background-position: center;
+      image-rendering: pixelated;
       overflow: hidden;
       color: silver;
       font-family: "Courier New", monospace;
