--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     body {
       background-image: url('bg.gif');
       background-size: cover;
-      
+      overflow: hidden;
+      image-rendering: pixelated;
       color: silver;
       font-family: "Courier New", monospace;
       text-align: center;
