--- a/index.html
+++ b/index.html
@@ -126,11 +126,13 @@
       URL.revokeObjectURL(a.href);
     }
   </script>
-  <p></p>
-  <p></p>
-  <p></p>
-  <p></p>
-  <p></p>
-  <p></p>
+  <p>11111111 draw from x y</p>
+  <p>11111110 draw from ram x y</p>
+  <p>00000000 erase from x y</p>
+  <p>11111100 add ram x y</p>
+  <p>11111000 subtract ram x y</p>
+  <p>00000001 set ram x to y</p>
+  <p>00000100 copy ram x to y</p>
+  <p>00000111 jp to code y</p>
 </body>
 </html>
